update projects file
Changes made to the hyper links now they are working links

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
             <p>The primary goal of this initiative is to overhaul the distributor's internal data analysis and discovery process, which currently relies on manual research and data aggregation from disparate sources. By leveraging advanced NLP algorithms, the project streamlines the extraction, aggregation, and transformation of data, significantly enhancing efficiency and accessibility for the distributor's team.</p>
             <p>Through the integration of a streamlined user interface and a robust data pipeline, the project enables seamless navigation through vast amounts of data from various sources. This automation not only optimizes the distributor's ability to identify emerging market trends and contracting opportunities but also empowers them to make well-informed decisions swiftly and stay competitive in the government contracting landscape.</p>
             <p>Throughout the project timeline, spanning from January 2024 to June 2024, the team will collaborate closely with the Fortune 500 company and Seattle University to develop and implement state-of-the-art solutions tailored to the distributor's specific needs. By the project's completion, it is anticipated that the distributor will experience a significant reduction in both time and effort required for market research activities, ultimately leading to improved operational efficiency and strategic decision-making.</p>
-            <button class="download-btn" onclick="window.location.href='https://github.com/gokula991/Industry-Partnered-Capstone-Project'">View on GitHub</button>
+            <button class="download-btn" onclick="window.location.href='https://github.com/gokula991/Industry-Partnered-Capstone-Project'">Private-NDA-signed</button>        
         </div>
 
          <div class="project">
@@ -56,7 +56,7 @@
             <p>General Analysis complete!</p>
             <table>
                 <tr>
-                    <th>Technology Domain</th>
+                    <th>Technology</th>
                     <th>Entry-level</th>
                     <th>Mid-senior level</th>
                     <th>Advanced level</th>
@@ -93,7 +93,7 @@
                 </tr>
             </table>
             <p>Skills: Large Language Models (LLM), Natural Language Processing (NLP), Application Programming Interfaces (API), Streamlit</p>
-            <button class="download-btn" onclick="window.location.href='https://github.com/gokula991/Industry-Partnered-Capstone-Project'">View on GitHub</button>
+            <button class="download-btn" onclick="window.location.href='https://github.com/gokula991/Streamlit-Application-for-Resume-Analysis-using-NLP-and-GPT-3.5-turbo'">View on GitHub</button>
         </div>
 
         <div class="project">
@@ -110,7 +110,7 @@
             <h3>Conclusion:</h3>
             <p>The project discusses the theoretical background of sound recognition, including feature extraction and classification using spectrograms and neural networks. It also covers hyperparameter tuning and optimization techniques to improve model performance.</p>
             <p>This study successfully builds custom neural network models for bird species classification, explores transfer learning, and addresses challenges such as dataset size and overfitting. The report highlights the importance of sound recognition in monitoring bird populations and biodiversity.</p>
-            <button class="download-btn" onclick="window.location.href='#'">View Full Github</button>
+            <button class="download-btn" onclick="window.location.href='https://github.com/gokula991/Deeplearning'">View on Github</button>
         </div>
         <div class="project">
             <h2>Stock Analysis using Yahoo Finance API</h2>
@@ -133,7 +133,7 @@
                 <li><strong>Programming:</strong> Working with Python libraries such as Pandas, NumPy, Seaborn, and Matplotlib will strengthen your programming skills, particularly in data manipulation and visualization.</li>
                 <li><strong>Domain Knowledge:</strong> You will gain domain-specific knowledge in finance and stock market analysis, which is valuable for future roles in data science and analytics.</li>
             </ul>
-            <button class="download-btn" onclick="window.location.href='#'">View Project Details</button>
+            <button class="download-btn" onclick="window.location.href='https://github.com/gokula991/Stock-Analysis-Prediction'">View on Github</button>
         </div>
 
         <div class="project">
@@ -170,7 +170,7 @@
             <p>Web scraping enables the extraction of hidden web data, which is crucial for various applications. The project aims to provide an easy-to-use interface for searching, analyzing, and extracting data from websites. Future work may involve integrating machine learning techniques to automate decision-making processes.</p>
             <h3>Future Work</h3>
             <p>Python's popularity in data science continues to grow, and future enhancements may include integrating machine learning algorithms to automate decision-making processes. Addressing the challenges of web structure inconsistency and implementing AI-driven applications are potential areas for future development.</p>
-            <button class="download-btn" onclick="window.location.href='#'">View Project Details</button>
+            <button class="download-btn" onclick="window.location.href='https://github.com/gokula991/Web-Scraping-Dynamic'">View on Github</button>
         </div>
 
         <div class="project">
