--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             border-radius: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
         }
+        .profile-image {
+            width: 100%; /* Adjust image width */
+            max-width: 500px; /* Set maximum width */
+            margin: 20px auto; /* Center the image */
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -29,7 +35,7 @@
     </div>
     <div class="container">
         <h1>Welcome On Board</h1>
-        
+        <img src="https://raw.githubusercontent.com/gokula991/nieche/master/profilepic.png" alt="Profile pic" class="rprofile-image">
         <section id="about">
             <h2>About Me</h2>
             <p>Hey everyone! 👋 Meet <strong> Gokula Chandra Kulala </strong>, a dynamic individual on the path of data-driven success! 🚀</p>
