--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     </div>
     <div class="container">
         <h1>Welcome On Board</h1>
-        <img src="https://raw.githubusercontent.com/gokula991/nieche/master/profilepic.png" alt="Profile pic" class="rprofile-image">
+        
+        <img src="https://github.com/gokula991/Portfolio/blob/master/profilepic.png" alt="Profile pic" class="rprofile-image">
         <section id="about">
             <h2>About Me</h2>
             <p>Hey everyone! 👋 Meet <strong> Gokula Chandra Kulala </strong>, a dynamic individual on the path of data-driven success! 🚀</p>
