--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a href="https://github.com/gokula991" target="_blank">
             <button class="github-btn">GitHub</button>
         </a>
-        <a href="https://www.linkedin.com/in/gokula-chandra-kulala" target="_blank">
+        <a href="https://www.linkedin.com/in/gokulachandra" target="_blank">
             <button class="linkedin-btn">LinkedIn</button>
         </a>
     </div>
