--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">My Projects</a></li>
-            <li><a href="experience.html">Work Experience</a></li>
+            <li><a href="experience.html" class="active">Work Experience</a></li>
             <li><a href="resume.html">My Resume</a></li>
             <li><a href="research.html">My Research</a></li>
         </ul>
