--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <div class="menu">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="projects.html">My Projects</a></li>
             <li><a href="experience.html">Work Experience</a></li>
             <li><a href="resume.html">My Resume</a></li>
