--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <div class="menu">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">My Projects</a></li>
+            <li><a href="projects.html" class="active">My Projects</a></li>
             <li><a href="experience.html">Work Experience</a></li>
             <li><a href="resume.html">My Resume</a></li>
             <li><a href="research.html">My Research</a></li>
