--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
             <li><a href="projects.html">My Projects</a></li>
             <li><a href="experience.html">Work Experience</a></li>
             <li><a href="resume.html">My Resume</a></li>
-            <li><a href="research.html">My Research</a></li>
+            <li><a href="research.html" class="active">My Research</a></li>
         </ul>
     </div>
     <div class="container">
