--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">My Projects</a></li>
             <li><a href="experience.html">Work Experience</a></li>
-            <li><a href="resume.html">My Resume</a></li>
+            <li><a href="resume.html" class="active">My Resume</a></li>
             <li><a href="research.html">My Research</a></li>
         </ul>
     </div>
