--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <li><a href="experience.html">Work Experience</a></li>
             <li><a href="resume.html">My Resume</a></li>
             <li><a href="research.html">My Research</a></li>
+            <li><a href="certifications.html">Certifications</a></li> 
         </ul>
     </div>
     <div class="container">
