--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
             <li><a href="experience.html">Work Experience</a></li>
             <li><a href="resume.html">My Resume</a></li>
             <li><a href="research.html">My Research</a></li>
+            <li><a href="certifications.html">Certifications</a></li> 
         </ul>
     </div>
     <div class="container">
