--- a/research.html
+++ b/research.html
@@ -31,6 +31,7 @@
             <li><a href="experience.html">Work Experience</a></li>
             <li><a href="resume.html">My Resume</a></li>
             <li><a href="research.html" class="active">My Research</a></li>
+            <li><a href="certifications.html">Certifications</a></li> 
         </ul>
     </div>
     <div class="container">
