--- a/resume.html
+++ b/resume.html
@@ -47,6 +47,7 @@
             <li><a href="experience.html">Work Experience</a></li>
             <li><a href="resume.html" class="active">My Resume</a></li>
             <li><a href="research.html">My Research</a></li>
+            <li><a href="certifications.html">Certifications</a></li> 
         </ul>
     </div>
     <div class="container">
