--- a/certifications.html
+++ b/certifications.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certifications</title>
-    <link rel="stylesheet" href="styles01.css"> <!-- Link to your main stylesheet -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your main stylesheet -->
     <style>
         /* Additional styles specific to this page */
         .container {
