--- a/resume.html
+++ b/resume.html
@@ -23,20 +23,22 @@
         }
 
         .download-btn {
-            display: inline-block;
+            display: block; 
+            width: fit-content; 
+            margin: 20px auto 0; 
             padding: 10px 20px;
             background-color: #007bff;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
-            margin-top: 20px;
             cursor: pointer;
         }
 
         .download-btn:hover {
             background-color: #0056b3;
         }
+
     </style>
 </head>
 <body>
